<resources>
    <string name="app_name">Wattson</string>
    <string name="record">Record</string>
    <string name="history">History</string>
    <string name="library">Library</string>
    <string name="account">Account</string>
    <string name="tap_to_record">Tap To Record</string>
    <string name="tap_to_pause">Tap To Pause</string>
    <string name="tap_to_resume_or_long_press_to_finish">Tap to Resume\nLong Press to Finish</string>
    <string name="test_show_finish">Test Show Finish</string>
    <string name="question_part">Question Part</string>
    <string name="play">Play</string>
    <string name="notes">Notes</string>
    <string name="delete">Delete</string>
    <string name="audio_to_text">Audio to Text</string>
    <string name="next">Next</string>
    <string name="_00_00">00:00</string>
    <string name="history_content">History Content</string>
    <string name="library_content">Library Content</string>
    <string name="account_content">Account Content</string>
    <string name="questionPart_part">Part</string>
    <string name="pause">pause</string>
</resources>