<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_1"
    tools:context=".RecordingPlaybackActivity">

    <!-- SeekBar and Playback Time -->

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="20dp"
        android:progress="0"
        android:progressTint="@color/yellow_2"
        android:thumbTint="@color/yellow_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playback_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_00_00"
        android:textSize="30sp"
        android:textColor="@color/yellow_2"
        app:layout_constraintTop_toBottomOf="@id/seek_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Control Panel with Buttons -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/playback_time_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Play Button -->
        <ImageButton
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_play_arrow_48"
            android:contentDescription="@string/play"
            android:background="@color/yellow_1"
            app:tint="@color/yellow_2" />

        <!-- Delete Button -->
        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_delete_48"
            android:contentDescription="@string/delete"
            android:background="@color/yellow_1"
            android:layout_marginStart="16dp"
            app:tint="@color/yellow_2" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
